--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 serde_json = "1.0.128"
 serde = { version = "1.0.209", features = ["derive"] }
 chrono = "0.4.38"
+tokio-postgres = "0.7.11"
+tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
